2008-01-16  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_image_or_update_axes):  Do not clip 3D image data
	against Z range if the plot mode is "set view map".

2008-01-13  Ethan A Merritt  <merritt@u.washington.edu>

	Backport fix for Bug #1850588

	* src/datafile.c: Call add_tic_user with a tick type of -1 (a new flag
	value) rather than 0 (major tick).  This allows to distinguish between
	tick labels read from a data file and those from the command line.

	* src/axis.c (gen_tics): Treat tick type -1 the same as major ticks. 

	* src/set.c (prune_dataticks) src/setshow.h: New routine to purge any
	axis tick labels left over from 'using xtics(n)' option of previous
	plot command.

	* plot2d.c (plotrequest): Call prune_dataticks() before each new plot.

2008-01-10  Ethan A Merritt  <merritt@u.washington.edu>

	* src/pm3d.c (pm3d_plot): When color information is given in a separate
	column, we must not use the interpolated z coordinate as for color.
	Bug #1783405

2008-01-10  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/command.c (replot_command): Fix for replot with unknown terminal.

2008-01-10  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/post.trm (PS_encode_image): Fix for maxcolors in "plot with
	image".

2008-01-10  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/hidden3d.c (store_polygon): Discard degenerate polygons.
	Bug #1727198

2008-01-07  Allin Cottrell  <cottrell@wfu.edu>

	* term/pdf.trm (EMF_setfont):  Add support for encodings
	iso_8859_1 iso_8859_2 iso_8859_15 cp1250

2008-01-06  Allin Cottrell  <cottrell@wfu.edu>

	* term/emf.trm (EMF_setfont):  Add support for encodings
	iso_8859_2 cp1250 koi8r koi8u

2007-12-20  Ethan A Merritt  <merritt@u.washington.edu>

	* term/x11.trm:  Fix 4.3-ism in patch of 2007-12-09.

2007-12-17  Lars Hecking  <lhecking@users.sourceforge.net>

	* share/Makefile.am: Gnuplot is generated by make and deleted by
	'make clean'. Bring variable names in line with xorg.
