@@ -1,3 +1,8 @@
+2008-01-28  Petr Mikulik  <mikulik@physics.muni.cz>
+
+	* graph3d.c (map3d_getposition, map3d_position_r): Fix case of y graph
+	coordinate and splot_map.
+
 2008-01-16  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/graphics.c (plot_image_or_update_axes):  Do not clip 3D image data
